# TwoWheeledBeagleBone

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  arm-toolchain.cmake  build-and-verify-all.sh  build-for-arm.sh  build-for-beaglebone.sh  clang-tidy.cmake  clean-cmake.sh  cppcheck.cmake  cpplint.cmake  distribute-to-beaglebone.sh
BeagleBoneIO/: .clang-tidy  CMakeLists.txt
BeagleBoneIO/CompilerSetup/: CMakeLists.txt
BeagleBoneIO/ExternalDependencies/LibRobotControl/: CMakeLists.txt
BeagleBoneIO/cmake/: BeagleBoneProjectConfig.cmake  ClangFormat.cmake  CppCheckTarget.cmake  CppLintTarget.cmake  SourcesFromTarget.cmake  clang-gcc-arm-toolchain.cmake  gcc-arm-toolchain.cmake
BeagleBoneIO/include/BeagleBoneIO/: EncoderEqep.h  LEDControl.h  MotorChannel.h  MotorsController.h  OnBoardButtons.h
BeagleBoneIO/scripts/: build-and-verify-all.sh  build-and-verify-debug.sh  build-and-verify-release.sh  build-and-verify.sh  build-for-beaglebone.sh  clean-cmake.sh  distribute-to-beaglebone.sh
BeagleBoneIO/src/: CMakeLists.txt  EncoderEqep.cpp  LEDControl.cpp  MotorChannel.cpp  MotorsController.cpp  OnBoardButtons.cpp
BeagleBoneIO/tests/: CMakeLists.txt  DartConfiguration.tcl  TestTwoWheeledBeagleBone_include-b858cb2.cmake  TestTwoWheeledBeagleBone_tests-b858cb2.cmake  testLEDControl.cpp
BeagleBoneIO/tests/static_analysis/: CMakeLists.txt
BeagleBoneIO/tests/static_analysis/clangtidy/: CMakeLists.txt
BeagleBoneIO/tests/static_analysis/cppcheck/: CMakeLists.txt
BeagleBoneIO/tests/static_analysis/cpplint/: CMakeLists.txt
CompilerSetup/: CMakeLists.txt
ExternalDependencies/: CMakeLists.txt
TwoWheeledRobot/: .clang-format  CMakeLists.txt  CPPLINT.cfg
TwoWheeledRobot/src/: main.cpp
WheelController/: CMakeLists.txt
WheelController/src/: WheelController.cpp
dependencies/: cmake_install.cmake
scripts/: build-and-verify-all.sh
tests/: CMakeLists.txt  DartConfiguration.tcl  TestTwoWheeledBeagleBone_include-b858cb2.cmake  cpp_test  testLEDControl.cpp
tests/static_analysis/: CMakeLists.txt
tests/static_analysis/clangtidy/: CMakeLists.txt
tests/static_analysis/cppcheck/: CMakeLists.txt
tests/static_analysis/cpplint/: CMakeLists.txt
